@startuml
skinParam classAttributeIconSize 0

class Game{
+ getGameStats(): void
}

Game "1..*" *-- Character

abstract class Character{
    #name: String
    #description:  String
    +setName() : String
    +getDetails() : String
    {abstract} +getScore() : int
}

class Human{
    + getScore() : int
}

class Robot{
    + getScore() : int
}

class Animal{
    + getScore() : int
}

Character <|-- Human
Character <|-- Robot
Character <|-- Animal

Character <|-- SkillsDecorator
SkillsDecorator ---> Character

SkillsDecorator <|-- PsychicSkill
SkillsDecorator <|-- ShapeShiftingSkill
SkillsDecorator <|-- FlightSkill
SkillsDecorator <|-- InvisibilitySkill

abstract class SkillsDecorator{
    {abstract} getDetails(): String
}


class PsychicSkill{
    +getScore(): int
    +getDetails(): String
}

class ShapeShiftingSkill{
    +getScore(): int
    +getDetails(): String
}

class FlightSkill {
    +getScore(): int
    +getDetails(): String
}

class InvisibilitySkill{
    +getScore(): int
    +getDetails(): String
}

@enduml